fixed marquee on mobile

--- a/frontend/assets/css/main.css
+++ b/frontend/assets/css/main.css
@@ -38,6 +38,11 @@ a:hover, button:hover {
   -webkit-filter: drop-shadow(0px 5px 20px rgba(0,0,0,0.30)) brightness(108%);
 }
 
+.container {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
 /* 'sm': '640px', */
 @media (min-width: 640px) {
 
